<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@drawable/bg_reguster">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:hint="@string/phone"
            android:id="@+id/phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
    <EditText
        android:hint="@string/username"
        android:id="@+id/registeruser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <EditText
            android:hint="@string/pwd"
            android:id="@+id/regietpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
      <TextView
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/sex"
          android:layout_width="30dp"
          android:textSize="20sp"/>
       <RadioGroup
           android:layout_weight="4"
           android:id="@+id/radioGroup"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal" >
        <RadioButton
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/man"
            android:text="@string/man"
            android:textSize="18sp"
            android:checked="true">
        </RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/woman"
            android:textSize="18sp"
            android:text="@string/woman">
        </RadioButton>
       </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">>
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/what_your_grade"
            android:layout_width="match_parent"
            android:textSize="20sp"/>
        <RadioGroup
            android:layout_weight="4"
            android:id="@+id/Group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fourgrade"
                android:text="@string/four"
                android:checked="true"
                android:textSize="18sp">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/sixgrade"
                android:textSize="18sp"
                android:text="@string/six">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/teachergrade"
                android:textSize="18sp"
                android:text="@string/teacher">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/professorgrade"
                android:textSize="18sp"
                android:text="@string/professor">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_weight="4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/hou_much"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/hourpay"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/realregister"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:text="@string/register"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/white"/>
    </LinearLayout>


</LinearLayout>