<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select"
        android:textSize="22sp"
        android:layout_above="@+id/four"
        android:textColor="@android:color/holo_blue_bright"/>
    <TextView
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="5dp"/>
    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:layout_above="@id/center"
        android:layout_toLeftOf="@id/center"
        android:background="@drawable/yellowbutton"
        />
    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:layout_above="@id/center"
        android:layout_toRightOf="@id/center"
        android:background="@drawable/greenbutton"/>
    <Button
        android:id="@+id/teach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:layout_below="@id/center"
        android:layout_toLeftOf="@id/center"
        android:background="@drawable/bluebutton"/>
    <Button
        android:id="@+id/profess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/professor"
        android:layout_below="@id/center"
        android:layout_toRightOf="@id/center"
        android:background="@drawable/redbutton"/>



</RelativeLayout>