<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ass_grade"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:id="@+id/group"
            android:paddingLeft="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good"
                android:textColor="@color/red"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/yellow"/>
            <RadioButton
                android:id="@+id/bad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad"/>

        </RadioGroup>
    </LinearLayout>
    <EditText
        android:id="@+id/content"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:background="@drawable/white"/>
    <LinearLayout
        android:padding="25dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commit"
            android:background="@color/orange"/>
        <TextView
            android:layout_width="10dp"
            android:layout_height="1dp" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/gray_1"/>

    </LinearLayout>


</LinearLayout>