<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/bg_reguster">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#6699FF"
            android:textSize="27sp"
            android:padding="30dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/phone"
           android:hint="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:maxLength="11"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <EditText
            android:id="@+id/password"
            android:hint="@string/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="15"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="right">

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:gravity="center"
        android:padding="10dp">
    <Button
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>