<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="30dp"

    android:background="@drawable/bg_reguster">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#6699FF"
            android:textSize="27sp"
            android:padding="30dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/who"
            android:layout_width="match_parent"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center"
            android:orientation="vertical" >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/learner"
                android:text="@string/qiuxue"
                android:padding="10dp"
                android:textSize="18sp"
                android:button="@drawable/radiobutton"
                android:background="@null"
                android:checked="true"
                android:drawableLeft="@drawable/buttonleft"
                android:drawablePadding="30dp"
                >
            </RadioButton>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/teacher"
                android:textSize="18sp"
                android:text="@string/chuanshou"
                android:button="@drawable/radiobutton"
                android:background="@null"
                android:drawableLeft="@drawable/buttonleft"
                android:drawablePadding="30dp">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">
        <Button
            android:id="@+id/next"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:text="@string/next"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>