<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/start"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:background="@drawable/t_redbutton"/>
    <LinearLayout
        android:id="@+id/linearlayout"
        android:visibility="gone"
        android:layout_below="@+id/btn"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/accept"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:background="@color/blue"/>
        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/reject"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject"
            android:background="@color/red"/>
    </LinearLayout>


</RelativeLayout>